--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"easy-json-database": "^1.5.1",
+		"@tauri-apps/api": "^1.4.0",
 		"uuid": "^9.0.0"
 	}
 }
