--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "snailtool-2.0",
-	"version": "0.0.1",
+	"name": "snailtool-v2",
+	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
